<resources>
    <string name="app_name">Project</string>
    <string name="distance">distance</string>
    <string name="energyConsumption">energyConsumption</string>
    <string name="search">Search</string>
    <string name="hectares">Hectares</string>
    <string name="m2">M²</string>
    <string name="hectaresHint">hectares</string>
    <string name="m2Hint">M2</string>

    <string name="areaType">Area Type</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="url_prd_dev">PRD URL</string>
</resources>
